--- a/fimco/fimcosite/templates/about.html
+++ b/fimco/fimcosite/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block links %}
-    <link href="static/css/about.css" rel="stylesheet" type="text/css"/>
+    <link href="/static/css/about.css" rel="stylesheet" type="text/css"/>
 {% endblock %}
 
 {% block content %}
@@ -174,7 +174,7 @@
     <!-- / -->
     <!-- PARALLAX -->
     <header class="text-center mb-10" id="founders">
-        <h3>THE FOUNDERS</h3>
+        <h3>OUR PEOPLE</h3>
     </header>
     <hr class="mb-60" />
     <section class="parallax parallax-2" id="section3">
@@ -188,15 +188,15 @@
                             <div class="box1 box-default">
                                 <div class="box-icon-title">
                                     <img class="img-fluid" src="" alt="" />
-                                    <h2>Abdulrahman Said</h2>
-                                    <small>Director</small>
+                                    <h2>Lawrence Mafuru</h2>
+                                    <small>Chairman</small>
                                 </div>
                             </div>
                         </div>
                         <div class="back">
                             <div class="box2 box-default">
-                                <h4 class="m-0">Abdulrahman Said</h4>
-                                <small>Director</small>
+                                <h4 class="m-0">Lawrence Mafuru</h4>
+                                <small>Chairman</small>
                                 <hr />
                                 <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere</p>
                                 <hr />
@@ -260,14 +260,14 @@
                             <div class="box1 box-default">
                                 <div class="box-icon-title">
                                     <img class="img-fluid" src="" alt="" />
-                                    <h2>Lawrence Mafuru</h2>
+                                    <h2>Sameer Hirji</h2>
                                     <small>Director</small>
                                 </div>
                             </div>
                         </div>
                         <div class="back">
                             <div class="box2 box-default">
-                                <h4 class="m-0">Lawrence Mafuru</h4>
+                                <h4 class="m-0">Sameer Hirji</h4>
                                 <small>Director</small>
                                 <hr />
                                 <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere</p>
@@ -289,6 +289,7 @@
                     </div>
                 </div>
                 <!-- /item -->
+
                 <!-- item -->
 {#                <div class="col-md-3 col-sm-6">#}
 {#                    <div class="box-flip box-color box-icon box-icon-center box-icon-round box-icon-large text-center">#}
@@ -332,7 +333,7 @@
     <section class="section-sm" id="approach">
         <div class="container">
             <header class="text-center mb-10">
-                <h3>OUR INVESTMENT APPROACH</h3>
+                <h3>OUR PHILOSOPHY</h3>
             </header>
             <hr class="mb-60" />
             <div class="row">
@@ -423,5 +424,5 @@
 {% endblock %}
 
 {% block scripts %}
-    <script type="text/javascript" src="static/js/about.js"></script>
+    <script type="text/javascript" src="/static/js/about.js"></script>
 {% endblock %}
