--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -125,7 +125,9 @@
                                     <li><a href="#">Privacy</a></li>
                                 </ul>
                                 &copy; All Rights Reserved, FIMCO Limited<br>
-                                FIMCO is licensed by the CMSA
+                                FIMCO Limited is an authorised financial <br>
+                                services provider licensed by the <br>
+                                Capital Market Security Authority
                             </div>
                             <div class="col-md-4 col-sm-4 hidden-xs-down">
                                 <!-- Social Icons -->
