--- a/fimco/fimcosite/templates/brokerage.html
+++ b/fimco/fimcosite/templates/brokerage.html
@@ -23,8 +23,8 @@
                         as they move throughout the trading day.
                     </p>
                     <p>
-                        Reach out to us and let us discuss how we can help you navigate the opportunities in the DSE
-                        for your portfolio.
+                        <a href="{% url 'site' 'contact' %}">Contact us</a> and let us discuss how we can help you
+                        navigate the opportunities in the DSE for your portfolio.
                     </p>
                 </div>
                 <!-- /LEFT -->
