--- a/fimco/fimcosite/templates/fund.html
+++ b/fimco/fimcosite/templates/fund.html
@@ -11,7 +11,7 @@
                 <!-- LEFT -->
                 <div class="col-md-9">
                     <div class="heading-title">
-                        <h2>Tailored Fund Management Services</h2>
+                        <h2>Fund Management</h2>
                     </div>
                     <p>
                         We offer our clients access to different funds that will maximize their returns and manage
@@ -24,7 +24,7 @@
                         risk averseness and the yields that the market has to offer.
                     </p>
                     <p>
-                        Reach out to discuss how we can help you invest your funds profitably.
+                        <a href="{% url 'site' 'contact' %}">Contact us</a> to discuss how we can help you invest your funds profitably.
                     </p>
                 </div>
                 <!-- /LEFT -->
