--- a/fimco/pochi/templates/pochi/group_profile.html
+++ b/fimco/pochi/templates/pochi/group_profile.html
@@ -16,7 +16,7 @@
                         <p class="lead">TZS {{ account.balance }}</p>
                     </div>
                     <div class="col-xs-6">
-                        <p class="lead">Reserved</p>
+                        <p class="lead">Interest</p>
                         <p class="lead">TZS 0</p>
                     </div>
                 </div>
