--- a/fimco/pochi/templates/pochi/group_settings.html
+++ b/fimco/pochi/templates/pochi/group_settings.html
@@ -103,7 +103,7 @@
                                                                 {% endfor %}
                                                             </div>
                                                             <div id="tab2_nobg" class="tab-pane">
-                                                                <button class="btn btn-primary">Exit</button>
+                                                                <a href="{% url 'exit_group' group %}" class="btn btn-primary">Exit</a>
                                                             </div>
                                                         </div>
                                                     </div>
