--- a/fimco/fimcoplatform/templates/fimcoplatform/base.html
+++ b/fimco/fimcoplatform/templates/fimcoplatform/base.html
@@ -9,9 +9,10 @@
             {% block main %}{% endblock %}
         </div>
     </section>
-    {% include 'fimcoplatform/modals.html' %}
 {% endblock %}
 {% block scripts %}
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.16/r-2.2.0/sl-1.2.3/datatables.min.js">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
