--- a/fimco/fimcosite/templates/contact.html
+++ b/fimco/fimcosite/templates/contact.html
@@ -23,6 +23,9 @@
             padding-left: 0;
             text-decoration: none;
         }
+        .box-static.box-border-top {
+            border-top: rgba(0,20,41,0.7) 3px solid;
+        }
     </style>
 {% endblock %}
 {% block content %}
@@ -74,6 +77,141 @@
                         </div>
                     </a>
                 </div>
+            </div>
+            <div class="row mt-30">
+                <!-- FORM -->
+                <div class="col-md-8 col-sm-8">
+                    <!-- BOX 1 -->
+                    <div class="box-static box-border-top p-30">
+
+                        <div class="box-title mb-30">
+                            <h2 class="fs-20"><strong><em>DM</em></strong> Anyone? ...</h2>
+                        </div>
+                        <!--
+                        MESSAGES
+
+                            How it works?
+                            The form data is posted to php/contact.php where the fields are verified!
+                            php.contact.php will redirect back here and will add a hash to the end of the URL:
+                                #alert_success 		= email sent
+                                #alert_failed		= email not sent - internal server error (404 error or SMTP problem)
+                                #alert_mandatory	= email not sent - required fields empty
+                                Hashes are handled by assets/js/contact.js
+
+                            Form data: required to be an array. Example:
+                                contact[email][required]  WHERE: [email] = field name, [required] = only if this field is required (PHP will check this)
+                                Also, add `required` to input fields if is a mandatory field.
+                                Example: <input required type="email" value="" class="form-control" name="contact[email][required]">
+
+                            PLEASE NOTE: IF YOU WANT TO ADD OR REMOVE FIELDS (EXCEPT CAPTCHA), JUST EDIT THE HTML CODE, NO NEED TO EDIT php/contact.php or javascript
+                                         ALL FIELDS ARE DETECTED DINAMICALY BY THE PHP
+
+                            WARNING! Do not change the `email` and `name`!
+                                        contact[name][required] 	- should stay as it is because PHP is using it for AddReplyTo (phpmailer)
+                                        contact[email][required] 	- should stay as it is because PHP is using it for AddReplyTo (phpmailer)
+                        -->
+
+                        <!-- Alert Success -->
+                        <div id="alert_success" class="alert alert-success mb-30">
+                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                            <strong>Thank You!</strong> Your message successfully sent!
+                        </div><!-- /Alert Success -->
+
+
+                        <!-- Alert Failed -->
+                        <div id="alert_failed" class="alert alert-danger mb-30">
+                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                            <strong>[SMTP] Error!</strong> Internal server error!
+                        </div><!-- /Alert Failed -->
+
+
+                        <!-- Alert Mandatory -->
+                        <div id="alert_mandatory" class="alert alert-danger mb-30">
+                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                            <strong>Sorry!</strong> You need to complete all mandatory (*) fields!
+                        </div><!-- /Alert Mandatory -->
+
+
+                        <form action="php/contact.php" method="post" enctype="multipart/form-data">
+                            <fieldset>
+                                <input type="hidden" name="action" value="contact_send" />
+                                <div class="row">
+                                        <div class="col-md-4">
+                                            <label for="contact:name">Full Name *</label>
+                                            <input required type="text" value="" class="form-control" name="contact[name][required]" id="contact:name">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <label for="contact:email">E-mail Address *</label>
+                                            <input required type="email" value="" class="form-control" name="contact[email][required]" id="contact:email">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <label for="contact:phone">Phone</label>
+                                            <input type="text" value="" class="form-control" name="contact[phone]" id="contact:phone">
+                                        </div>
+                                </div>
+                                <div class="row">
+                                        <div class="col-md-8">
+                                            <label for="contact:subject">Subject *</label>
+                                            <input required type="text" value="" class="form-control" name="contact[subject][required]" id="contact:subject">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <label for="contact:id">POCHI ID<small> (optional)</small></label>
+                                            <input type="text" value="" class="form-control" name="contact[id]" id="contact:id">
+                                        </div>
+                                </div>
+                                <div class="row">
+                                        <div class="col-md-12">
+                                            <label for="contact:message">Message *</label>
+                                            <textarea required maxlength="10000" rows="8" class="form-control" name="contact[message]" id="contact:message"></textarea>
+                                        </div>
+                                </div>
+                                <div class="row">
+                                        <div class="col-md-12">
+                                            <label for="contact:attachment"> Attachment, if any...</label>
+
+                                            <!-- custom file upload -->
+                                            <input class="custom-file-upload" type="file" name="contact[attachment]" id="contact:attachment" data-btn-text="Select a File" />
+                                            <small class="text-muted block">Max file size: 10Mb (zip/pdf/jpg/png)</small>
+
+                                        </div>
+                                </div>
+                            </fieldset>
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <button type="submit" class="btn btn-primary"><i class="fa fa-check"></i> SEND MESSAGE</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <!-- /BOX 1 -->
+{#                    <h3><strong><em>DM</em></strong> Anyone? ...</h3>#}
+
+                </div>
+                <!-- /FORM -->
+
+                <!-- INFO -->
+                <div class="col-md-4 col-sm-4">
+                    <h2>Visit Us</h2>
+                        <p>
+                            Please feel free to drop by our office any time during our business hours in the 2nd floor,
+                            Jangid Plaza for any inquiries regarding FIMCO platform products. We'll be glad to help you!
+                        </p>
+                        <hr />
+                        <p>
+                            <span class="block"><strong><i class="fa fa-map-marker"></i> Address:</strong> Plot No. G6, Chaburuma Road, Off. Ali Hassan Mwinyi Road, Dar Es Salaam, Tanzania</span>
+                            <span class="block"><strong><i class="fa fa-phone"></i> Phone:</strong> <a href="tel:255789123456">+255 789 123 456</a></span>
+                            <span class="block"><strong><i class="fa fa-envelope"></i> Email:</strong> <a href="mailto:admin@fimco.co.tz">admin@fimco.co.tz</a></span>
+                        </p>
+                        <hr />
+                        <h4 class="font300">Business Hours</h4>
+                        <p>
+                            <span class="block"><strong>Monday - Friday:</strong> 9am to 6pm</span>
+                            <span class="block"><strong>Saturday:</strong> 10am to 2pm</span>
+                            <span class="block"><strong>Sunday:</strong> Closed</span>
+                        </p>
+                </div>
+                <!-- /INFO -->
             </div>
         </div>
     </section>
