--- a/fimco/pochi/templates/pochi/deposit.html
+++ b/fimco/pochi/templates/pochi/deposit.html
@@ -146,7 +146,7 @@
         <div id="content" class="padding-20">
             <div class="panel panel-default">
                 <div class="panel-heading panel-heading-transparent">
-                    <strong>TIGO PESA</strong>
+                    <strong>Mobile Money</strong>
                 </div>
                 <div class="panel-body">
                     <div class="heading-title text-center mb-80">
@@ -184,6 +184,138 @@
                             <div class="process-wizard-info text-center">Complete the remaining steps.</div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div id="content" class="padding-20">
+            <div class="panel panel-default">
+                <div class="panel-heading panel-heading-transparent">
+                    <strong>Bank Transfer</strong>
+                </div>
+                <div class="panel-body">
+                    <div class="heading-title text-center mb-80">
+						<h3>Fill in the Transaction Transfer Form from local bank.</h3>
+					</div>
+{#                    <div class="row process-wizard process-wizard-info">#}
+{#                        <div class="col-xs-2 process-wizard-step complete">#}
+{#                            <div class="text-center process-wizard-stepnum">Step 1</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 2</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 3</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-3 process-wizard-step complete"><!-- complete -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 4</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-3 process-wizard-step active"><!-- active -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 5</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                    </div>#}
+                </div>
+            </div>
+        </div>
+        <div id="content" class="padding-20">
+            <div class="panel panel-default">
+                <div class="panel-heading panel-heading-transparent">
+                    <strong>Mobile Banking</strong>
+                </div>
+                <div class="panel-body">
+                    <div class="heading-title text-center mb-80">
+						<h3></h3>
+					</div>
+{#                    <div class="row process-wizard process-wizard-info">#}
+{#                        <div class="col-xs-2 process-wizard-step complete">#}
+{#                            <div class="text-center process-wizard-stepnum">Step 1</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 2</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 3</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-3 process-wizard-step complete"><!-- complete -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 4</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-3 process-wizard-step active"><!-- active -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 5</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                    </div>#}
+                </div>
+            </div>
+        </div>
+        <div id="content" class="padding-20">
+            <div class="panel panel-default">
+                <div class="panel-heading panel-heading-transparent">
+                    <strong>Cash Deposit</strong>
+                </div>
+                <div class="panel-body">
+                    <div class="heading-title text-center mb-80">
+						<h3></h3>
+					</div>
+{#                    <div class="row process-wizard process-wizard-info">#}
+{#                        <div class="col-xs-2 process-wizard-step complete">#}
+{#                            <div class="text-center process-wizard-stepnum">Step 1</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 2</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 3</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-3 process-wizard-step complete"><!-- complete -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 4</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                        <div class="col-xs-3 process-wizard-step active"><!-- active -->#}
+{#                            <div class="text-center process-wizard-stepnum">Step 5</div>#}
+{#                            <div class="progress"><div class="progress-bar"></div></div>#}
+{#                            <a href="#" class="process-wizard-dot"></a>#}
+{#                            <div class="process-wizard-info text-center"></div>#}
+{#                        </div>#}
+{#                    </div>#}
                 </div>
             </div>
         </div>
