--- a/fimco/pochi/templates/pochi/group_statement.html
+++ b/fimco/pochi/templates/pochi/group_statement.html
@@ -1,42 +1,88 @@
 {% extends "pochi/main.html" %}
 {% block content %}
     <section id="middle">
-        <div id="content" class="dashboard padding-20">
-        {% if statement %}
-            <div class="statements">
-                {% for statement in statements %}
-                    <div class="row statement">
-                        <div class="col-xs-3">
-                            <div class="row">
-                                <div class="col-xs-6 col-md-2 col-lg-2 text-center"
-                                     style="padding: 15px">
-                                    <i class="et-wallet"></i>
-                                </div>
-                                <div class="col-xs-6">
-                                    <div class="row">{{ statement.service }}</div>
-                                    <div class="row">{{ statement.channel }}</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-3">
-                            <div class="row">{{ statement.currency }} {{ statement.amount }}</div>
-                            <div class="row">{{ statement.currency }} {{ statement.charges }}</div>
-                        </div>
-                        <div class="col-xs-3">
-                            {{ statement.dest_account }}
-                        </div>
-                        <div class="col-xs-3">
-                            {{ statement.status }}
+        <!-- page title -->
+        <header id="page-header">
+            <h1>{{ group }} Statement</h1>
+        </header>
+        <!-- /page title -->
+
+        <div id="content" class="padding-20">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6 text-left">
+                            <h4><strong>Group</strong> Details</h4>
+                            <ul class="list-unstyled">
+                                <li><strong> Name:</strong> {{ group }}</li>
+                                <li><strong> POCHI ID:</strong> {{ account }}</li>
+                            </ul>
                         </div>
                     </div>
-                {% endfor %}
+                    {% if transactions %}
+                        <form method='GET' action="{% url 'group_statement' group %}">
+                            <div class="row">
+                                <div class="col-lg-3 col-md-3 col-sm-8">
+                                    <label>Filter by service
+                                        <input type="text" class="form-control" name="service">
+                                    </label>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-8">
+                                    <label>Filter by channel
+                                        <input type="text" class="form-control" name="channel">
+                                    </label>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-8">
+                                    <label>Select date range
+                                        <input type="text"
+                                           class="form-control rangepicker"
+                                           name="range"
+                                           data-format="yyyy-mm-dd"
+                                           data-from="2018-01-01"
+                                           data-to="2018-12-31">
+                                    </label>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-4">
+                                    <input type="submit" class="btn btn-primary" value="GO">
+                                </div>
+                            </div>
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered table-hover" id="sample_2">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Service</th>
+                                        <th>Mode</th>
+                                        <th>Amount</th>
+                                        <th>Charges</th>
+                                        <th>Reference</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                {% for transaction in transactions %}
+                                    <tr class="odd gradeX">
+                                        <td class="center">{{ transaction.full_timestamp }}</td>
+                                        <td class="center">{{ transaction.service }}</td>
+                                        <td class="center">{{ transaction.channel }}</td>
+                                        <td class="center">{{ transaction.currency }} {{ transaction.amount }}</td>
+                                        <td class="center">{{ transaction.charge }}</td>
+                                        <td class="center">{{ transaction.reference }}</td>
+                                        <td class="center">{{ transaction.status }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <div class="alert alert-default margin-bottom-30">
+                            <strong>This group has no transactions yet!</strong>
+                        </div>
+                    {% endif %}
+                    <hr class="nomargin-top" />
+                </div>
             </div>
-        {% else %}
-            <div class="alert alert-default margin-bottom-30">
-                <strong>This group has no transactions yet!</strong>
-            </div>
-        {% endif %}
-
         </div>
     </section>
 {% endblock %}
