--- a/fimco/pochi/templates/pochi/withdrawal.html
+++ b/fimco/pochi/templates/pochi/withdrawal.html
@@ -1,4 +1,7 @@
 {% extends "pochi/main.html" %}
+{% block links %}
+    <link href="/static/pochi/css/withdraw.css" rel="stylesheet" type="text/css" />
+{% endblock %}
 {% block content %}
     <section id="middle">
         <div id="content" class="padding-20">
@@ -33,7 +36,8 @@
             <div class="col-lg-8 col-md-10 col-sm-12">
                 <div class="alert alert-warning margin-bottom-30">
                     <h4>You have <strong>No</strong> External Account!</h4>
-                    <p>Add an external account below <span><i class="fa fa-hand-o-down"></i></span></p>
+                    <p>Add an external account below and ensure the indemnity form is filled and signed by your bank
+                        account<span><i class="fa fa-hand-o-down"></i></span></p>
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading panel-heading-transparent">
@@ -52,6 +56,11 @@
                                         <option value="AMANA BANK">AMANA BANK</option>
                                     </select>
                                     <input type="hidden" name="type" value="BANK">
+                                </div>
+                                <div class="col-lg-8 col-md-6 col-sm-8">
+                                    <label> Bank branch
+                                        <input type="text" class="form-control" name="branch" >
+                                    </label>
                                 </div>
                             </div>
                             <div class="row">
@@ -118,7 +127,7 @@
                                                     <label>Enter Amount</label>
                                                     <input type="number" class="form-control" name="amount" placeholder="TZS" required>
                                                     <br />
-                                                    <input type="hidden" name="type" value="WITHDRAW">
+                                                    <input type="hidden" name="type" value="bank">
                                                 </div>
                                                 <div class="panel-footer transfer">
                                                     <button class="btn btn-primary" type="submit">
@@ -144,32 +153,46 @@
                                                     <div class="row">
                                                         <div class="col-lg-4 col-md-6 col-sm-8">
                                                             <label> Select your bank </label>
-                                                            <select class="form-control" name="institution" title="Select bank">
+                                                            <select class="form-control" name="institution" title="Select bank" required>
                                                                 <option disabled="disabled">None</option>
                                                                 <option value="CRDB">CRDB</option>
                                                                 <option value="NMB">NMB</option>
                                                                 <option value="AMANA BANK">AMANA BANK</option>
                                                             </select>
-                                                            <input type="hidden" name="type" value="BANK">
+                                                            <input type="hidden" name="type" value="account">
+                                                        </div>
+                                                        <div class="col-lg-8 col-md-6 col-sm-8">
+                                                            <label> Bank branch
+                                                                <input type="text" class="form-control" name="branch" required>
+                                                            </label>
                                                         </div>
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-md-6 col-xs-8">
                                                             <label>Account name
-                                                                <input type="text" class="form-control" name="name" >
+                                                                <input type="text" class="form-control" name="name" required>
                                                             </label>
                                                         </div>
                                                         <div class="col-md-6 col-xs-8">
                                                             <label>Account number
-                                                                <input type="text" class="form-control masked" name="account" data-format="999999999999999">
+                                                                <input type="text" class="form-control masked" name="account" data-format="999999999999999" required>
                                                             </label>
                                                         </div>
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-md-6 col-xs-8">
                                                             <label>Alias account name <small>(short name)</small>
-                                                                <input type="text" class="form-control" name="nickname" >
+                                                                <input type="text" class="form-control" name="nickname" required>
                                                             </label>
+                                                        </div>
+                                                        <div class="col-md-12 col-xs-12">
+                                                            <label>Add an attachment</label>
+                                                            <div class="fancy-file-upload fancy-file-primary">
+                                                                <i class="fa fa-upload"></i>
+                                                                <input type="file" class="form-control" name="contact[attachment]" onchange="jQuery(this).next('input').val(this.value);" />
+                                                                <input type="text" class="form-control" placeholder="no file selected" readonly="" />
+                                                                <span class="button">Choose File</span>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-xs-12">
@@ -181,6 +204,40 @@
                                     </div>
                                 </div>
                             </form>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <div id="panel-ui-tan-l4" class="panel panel-default">
+                            <div class="panel-heading">
+                                <span class="elipsis">
+                                    <strong>Form</strong>
+                                </span>
+                            </div>
+                            <div class="panel-body">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="dropdown">
+                                            <button onclick="show_dropdown('download')" class="btn btn-primary">Download Form</button>
+                                            <div id="download" class="dropdown-content">
+                                                <a href="{% url 'create_form' %}">Download completed form</a>
+                                                <a href="{% url 'index' %}" >Download blank form</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="dropdown">
+                                            <button onclick="show_dropdown('email')" class="btn btn-primary">Email Form</button>
+                                            <div id="email" class="dropdown-content">
+                                                <a href="{% url 'index' %}">Email completed form</a>
+                                                <a href="{% url 'index' %}" >Email blank form</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <button class="btn btn-primary">Upload Scanned copy</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
